--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 URI_DATABASE = 'mongodb+srv://admin:admin@cluster0.2ixjxc3.mongodb.net/API-Ricky-and-Morty?retryWrites=true&w=majority'
-SECRET = 
+SECRET = euamochocolate
