--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.3",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "swagger": "^0.7.5",
+    "swagger-ui-express": "^4.5.0"
   }
 }
